tests/paczka1/fuzzy1/34061701.err
Error in line 2: TYIRrJpy A20 145,70
Error in line 1: TYIRrJpy A20 35,1
Error in line 4: exVr3 A641 13,0
Error in line 7: YhtbF A114 56,00
Error in line 6: exVr3 S524 12,9
Error in line 9: exVr3 A114 46,7
Error in line 8: YhtbF A114 233,0
Error in line 13: YhtbF A20 83,7
Error in line 19: exVr3 A20 23,8
Error in line 24: A20 S524 29,2
Error in line 26: YhtbF A20 57,7
Error in line 28: YhtbF A641 61,9
Error in line 15: hJ6qPUo6u S524 87,7
Error in line 36: YhtbF A20 47,5
